--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 title: FLUKA
 theme: PaperMod
 params:
+    ShowReadingTime: true
     profileMode:
       enabled: true
       title: Mehdi Benabdelkader
@@ -13,12 +14,10 @@ params:
       imageHeight: 150
       imageTitle: Ana Labes Grafata
       buttons:
-        - name: Posts
-          url: ./docs
-        - name: Tags
-          url: ./tags
-        - name: Archives
-          url: ./archives
+        - name: Blog
+          url: ./blog
+        - name: About
+          url: ./about
     
     socialIcons: 
         - name: "twitter"
