--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 title: FLUKA
 theme: PaperMod
 params:
+    googleAnalytics: G-KFZSHSXH46
     ShowReadingTime: true
     profileMode:
       enabled: true
